# split-test

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml  test.yml
example/report/: report.xml
split-test/: Cargo.toml
src/: main.rs
tests/: integration_test.rs
tests/fixtures/cypress/: cypress.json
tests/fixtures/cypress/cypress/integration/: a_spec.js  b_spec.js  c_spec.js
tests/fixtures/cypress/report/: report-4b7281b217bdd81b6395441817e71fde.xml  report-5312bcd40d75af94812dbc01dae7aa4b.xml  report-c692b256a0ce44b6cc9f2c025fcb13a3.xml
tests/fixtures/invalid/: foo
tests/fixtures/minitest/: Gemfile  a_test.rb  b_test.rb  c_test.rb  test_helper.rb
tests/fixtures/minitest/report/: TEST-a.xml  TEST-b.xml  TEST-c.xml
tests/fixtures/rspec/: Gemfile  a_spec.rb  b_spec.rb  c_spec.rb
tests/fixtures/rspec/report/: report.xml
