[package]
name = "split-test"
version = "0.3.0"
authors = ["Fumiaki MATSUSHIMA <mtsmfm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
quick-xml = { version = "0.20", features = ["serialize"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.8"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "2.0"
